--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,4 +3,5 @@
   <li><a href="{{ root_url }}/tutoriales">Tutoriales</a></li>
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/acerca-de-mi">Acerca de mí</a></li>
 </ul>
